--- a/src/pages/header/Header.style.css
+++ b/src/pages/header/Header.style.css
@@ -12,6 +12,7 @@
   gap: calc(80px + 2vmin);
 
   font-size: calc(80px + 2vmin);
+  line-height: 100%;
 
   white-space: pre-wrap;
 }
@@ -39,7 +40,7 @@
 @media screen and (max-device-width: 414px) {
   .email {
     position: absolute;
-    right: 15px;
+    right: 17px;
 
     font-size: calc(12px + 2vmin);
   }
